コメント機能の非同期

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -7,6 +7,12 @@
   box-sizing: border-box;
 }
 
+.show-all {
+  padding: 5px;
+
+}
+
+
 .post-new {
   background-image: image-url('landscape9.jpg');
   background-size:cover;
@@ -16,13 +22,11 @@
 
 .post-img {
   border-radius: 50%;
-  width: 100px;
-  height: 100px;
+  width: 65px;
+  height: 65px;
   object-fit: cover;
 }
 
 .index-all {
-  background-image: image-url('landscape11.jpg');
-  background-size:cover;
-  background-position: center;
+  background-color: #ddd;
 }
