--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,14 +1,4 @@
-<%= form_for [post, comment], remote: true do |f| %>
-  <div class="field">
-    <div class="control">
-      <%= f.text_area :comment_content, class:"input", placeholder:"コメント" %>
-      <%= f.hidden_field :post_id, value: post.id %>
-    </div>
-  </div>
-  <br>
-  <div class="field is-grouped">
-    <div class="control">
-      <%= f.submit 'コメントする', class:"button is-link form__submit" %>
-    </div>
-  </div>
+<%= form_with(model: [post, comment], url: post_comments_path(@post) ) do |f| %>
+    <%= f.text_area :comment_content, class: "input-mysize" %>
+    <%= f.submit "送信", class: "btn btn-outline-dark comment-submit float-right" %>
 <% end %>
