--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,6 @@
 <div class="main">
   <head>
-    <link rel="stylesheet" href="tops.css" />
+    <link rel="stylesheet" href="tops.scss" />
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
   </head>
   <body>
