--- a/app/assets/stylesheets/post/post-show.css
+++ b/app/assets/stylesheets/post/post-show.css
@@ -4,12 +4,10 @@
   text-decoration: none;
 }
 
+
 .post-show {
-  width: 400px;
-  margin-left: 280px;
-  border: 1px #ddd solid;
-  margin-bottom: 10px;
-  margin-top: 50px;
+  display: flex;
+  padding: 15px;
 }
 
 .post-name, .post-caption, .post-usr-name {
@@ -21,6 +19,7 @@
 
 .post-show2 {
   border: none;
+  padding-left: 8px;
 }
 
 .post-time {
@@ -38,11 +37,18 @@
   display: inline;
 }
 
-.comments h2 {
+.comment-create h3 {
   text-align: center;
   color:#888;
-  font-size: 50px;
+  font-size: 20px;
   font-family: 'Lobster', cursive;
   margin-bottom: 0;
   margin-top: 0;
+}
+
+
+
+.comment-create {
+  text-align: center;
+
 }
