--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -19,7 +19,7 @@ h1, h2 {
 }
 
 .profile-name {
-  color: #555;
+  color: #fff;
   margin-top: 0;
   font-size: 30px;
   font-family: 'Lobster', cursive;
@@ -41,13 +41,18 @@ h1, h2 {
 }
 
 .top-index h1 {
-  color: #666666;
+  color: #ddd;
   font-size: 70px;
   font-family: 'Lobster', cursive;
+  margin-top: 0;
 }
 
 .post-new p {
   margin-left: 300px;
+}
+
+.users a {
+  color: #fff;
 }
 
 .users {
@@ -56,10 +61,14 @@ h1, h2 {
   margin: 5px;
   padding: 10px;
   width: 100%;
+  margin-bottom: 0;
 }
 
 .users p {
   display: inline-block;
 }
 
-
+.top-index {
+ background-image: image-url('landscape15.jpg');
+ background-size: 100%;
+}
