--- a/app/views/comments/index.js.erb
+++ b/app/views/comments/index.js.erb
@@ -1,2 +1,2 @@
-$("#comments_area").html("<%= j(render 'index', { comments: @comment }) %>")
+$("#comments_area").html("<%= j(render 'index', { comments: @comment.post.comments.order(created_at: :desc).page(params[:page]).per(5) }) %>")
 $("textarea").val('')
