--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
   </head>
   <div class="profile-container">
-    <h3 class="profile-name"><%= @user.name %>'s My Page</h3>
+    <h3 class="profile-name"><%= @user.name %>'s Page</h3>
    <div class="profile_image">
      <% if @user.id ==current_user.id %>
        <%= link_to edit_user_path(@user) do %>
