--- a/app/views/comments/_index.html.erb
+++ b/app/views/comments/_index.html.erb
@@ -19,7 +19,7 @@
                         <% end %>
                     <% end %>
                 </div>
-                <span class="comment-date pull-right">
+                <span class="comment-date pull">
                       <%= comment.created_at.strftime('%Y/%m/%d %H:%M:%S') %>
                 </span>
             </div>
