--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,10 @@
 <div class="index-all">
-  <div class="search-form">
-    <%= form_with url: search_path, method: :get, local: true do |f| %>
-      <%= f.text_field :keyword, value: @keyword %>
+    <div class="search-form">
+    <%= form_with url: search_posts_path, method: :get, local: true do |f| %>
+      <%= f.text_field :keyword, placeholder: "投稿を検索する", class: "search-input" %>
       <%= f.submit "検索" %>
     <% end %>
-  </div>
+    </div>
   <div class="post-index">
     <% @posts.each do |post| %>
     <div class="post-index2">
