--- a/app/views/genres/index.html.erb
+++ b/app/views/genres/index.html.erb
@@ -15,5 +15,7 @@
     </div>
     <% end %>
     <!--ユーザーに新たに追加させない-->
-    <p><%= link_to "ジャンル追加", new_genre_path %></p>
+    <% if user_signed_in? && current_user.admin? %>
+      <p><%= link_to "ジャンル追加", new_genre_path %></p>
+    <% end %>
 </div>
