--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -5,5 +5,6 @@
   </head>
   <body>
     <h1><strong>Bikers</strong></h1>
+    <div class="dialogue">May you meet good people<br /> on a good Motorbike<br /> and have a good life!</div>
   </body>
 </div>
