--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,7 @@
     </div>
   <div class="post-index">
     <% @posts.each do |post| %>
-    <div class="post-index2">
+    <div class="post-index-contents">
 
        <div class="post-image">
          <%= link_to post_path(post.id) do %>
